--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-subv1",
+  "name": "auth-subv2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "next": "14.1.4",
-    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
+    "next-auth": "npm:next-auth-chrysus@^5.0.0-beta.23",
     "react-dom": "^18"
   },
   "devDependencies": {
